kubernetes/kube-vip/overlays/okd/kube-vip-vlan.yaml
# # https://github.com/kube-vip/kube-vip/blob/main/pkg/kubevip/config_envvar.go
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: kube-vip-ds-vlan3
  namespace: kube-vip
  annotations:
    checkov.io/skip1: CKV_K8S_8=Not Supported
    checkov.io/skip2: CKV_K8S_9=Not Supported
    checkov.io/skip3: CKV_K8S_38=Leader Election and Services
    checkov.io/skip4: CKV_K8S_40=Needs to run as root
    checkov.io/skip5: CKV_K8S_23=Needs to run as root
    checkov.io/skip6: CKV_K8S_25=Needs Network capabilities
    checkov.io/skip7: CKV_K8S_19=Needs Host Network to Manage Load Balancing
spec:
  selector:
    matchLabels:
      app: kube-vip-ds-vlan3
  template:
    metadata:
      labels:
        app: kube-vip-ds-vlan3
    spec:
      securityContext:
        seccompProfile:
          type: RuntimeDefault
        runAsNonRoot: false
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: nic2
                    operator: In
                    values:
                      - enp9s0
                      - enp8s0
              # - matchExpressions:
              #     - key: node-role.kubernetes.io/control-plane
              #       operator: Exists
              # - matchExpressions:
              #     - key: node-role.kubernetes.io/control-plane
              #       operator: Exists
      containers:
        - args:
            - manager
          image: ghcr.io/kube-vip/kube-vip:v0.8.7@sha256:32829cc6f8630eba4e1b5e4df5bcbc34c767e70703d26e64a0f7317951c7b517
          imagePullPolicy: IfNotPresent
          name: kube-vip
          resources:
            requests:
              ephemeral-storage: "15Mi"
              memory: "32Mi"
              cpu: "5m"
            limits:
              ephemeral-storage: "15Mi"
              memory: "128Mi"
              cpu: "100m"
          securityContext:
            runAsNonRoot: false
            readOnlyRootFilesystem: true
            allowPrivilegeEscalation: false
            seccompProfile:
              type: RuntimeDefault
            capabilities:
              add:
                - NET_ADMIN
                - NET_RAW
                - SYS_TIME
              drop:
                - ALL
      hostNetwork: true
      serviceAccountName: kube-vip
      automountServiceAccountToken: true
      tolerations:
        - effect: NoSchedule
          operator: Exists
          key: node.kubernetes.io/unschedulable
        - effect: NoExecute
          operator: Exists
          key: node.kubernetes.io/unschedulable
